--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,12 +1,14 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 {{ partial "meta.html" . }}
 </head>
 
-<body>
-{{ partial "nav.html" }}
+<div id='main' class="container">
 {{ block "main" . }}
 {{ end }}
+</div>
+
+{{ if not .Params.hide_footer }}{{ partial "footer.html" . }}{{ end }}
 </body>
 </html>
