renamed to blog; somewhat working menus

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,6 +4,10 @@
 {{ partial "meta.html" . }}
 </head>
 
+<header>
+{{ partial "header.html" . }}
+</header>
+
 <div id='main' class="container">
 {{ block "main" . }}
 {{ end }}
