--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -213,7 +213,7 @@ iframe {
 }
 
 /* Code (inline) */
-code.highlighter-rouge {
+p code {
   padding: 0.07em 0.2em;
   border: 1px dotted;
   white-space: nowrap;
