--- a/layouts/documents/single.html
+++ b/layouts/documents/single.html
@@ -17,6 +17,7 @@
 <p class="m-0 pb-2">Updated {{ .Date.Format "2006-01-02" }}</p>
 </div>
 <div id="c-content">
+{{ .TableOfContents }}
 {{ .Content }}
 </div>
 
